--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,10 +11,13 @@ jobs:
       id-token: write
       contents: read
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: recursive  # Fetch Hugo themes (true OR recursive)
+          submodules: true
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
@@ -22,3 +25,10 @@ jobs:
           extended: true
       - name: Build
         run: make build-min
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: public/
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
