--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+      pages: write
     runs-on: ubuntu-latest
     environment:
       name: github-pages
