--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://kylev.github.io/sandbox-hugo/'
 languageCode = 'en-us'
 title = 'Hugo Sandbox'
-theme = 'ananke'
+theme = 'blowfish'
